# gke_sandbox

./: README.md
alice/: binauthz_policy.tmpl  deny_policy.tmpl  org_policy.yaml
alice/deploy/: ns.yaml  rbac.tmpl  serviceaccount.tmpl
alice/deploy/gatekeeper/: constraint.tmpl  gatekeeper.yaml
alice/gnupg_alice/: public.pem  pubring.kbx  pubring.kbx~  random_seed  trustdb.gpg
alice/gnupg_alice/openpgp-revocs.d/: 087EA98DB38779D98097F7414429C55979783392.rev
alice/gnupg_alice/private-keys-v1.d/: A7A7F1938ACC9D3C1C4C4F6484A7098F84887DD8.key  D2F7C5D84E02A7328707CD0E45DB7B4B4BB6451B.key
bob/certs/: llama.crt  llama.key
bob/deploy/: deployment.tmpl  ingress.yaml  secret.yaml  service.yaml  serviceaccount.yaml
bob/harness/: BUILD.bazel  Dockerfile  WORKSPACE  main.py  requirements.txt
bob/harness/public/: app.js
bob/harness/templates/: index.html
model/encrypt/: decrypt.py  encrypt.py  tink_key.json
model/generate_model/: generate.py  requirements.txt
